[project]
name = "flight-delays-dashboard"
version = "1.0.0"
description = "Dashboard interactivo de análisis de retrasos de vuelos 2015"
authors = [
    {name = "Daniel Ariza García"}
]
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "plotly>=5.17.0",
    "numpy>=1.24.0",
    "kagglehub>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "ipython>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
